--- a/Kiem_tra/index.html
+++ b/Kiem_tra/index.html
@@ -7,13 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <form id="login" method="get" action="login.php">    
-      <label><b>User Name     
-      </b>    
-      </label>    
-      <input type="text" name="Uname" id="Uname" placeholder="Username">    
-
-   
-  </form>
+    <form id="login" method="get" action="login.php">
+      <label><b>User Name </b> </label>
+      <input type="text" name="Uname" id="Uname" placeholder="Username" />
+      <label><b>Password </b> </label>
+      <input type="Password" name="Pass" id="Pass" placeholder="Password" />
+    </form>
   </body>
 </html>
