--- a/Kiem_tra/index.html
+++ b/Kiem_tra/index.html
@@ -10,8 +10,12 @@
     <form id="login" method="get" action="login.php">
       <label><b>User Name </b> </label>
       <input type="text" name="Uname" id="Uname" placeholder="Username" />
-      <label><b>Password </b> </label>
+      <br><br>    
+      <label><b>Mật khẩu </b> </label>
       <input type="Password" name="Pass" id="Pass" placeholder="Password" />
+      <br><br>    
+      <button>login</button>
     </form>
+    
   </body>
 </html>
