edit tên đăng nhập, password

--- a/Kiem_tra/index.html
+++ b/Kiem_tra/index.html
@@ -8,14 +8,13 @@
   </head>
   <body>
     <form id="login" method="get" action="login.php">
-      <label><b>User Name </b> </label>
+      <label><b>Tên đăng nhập </b> </label>
       <input type="text" name="Uname" id="Uname" placeholder="Username" />
-      <br><br>    
-      <label><b>Mật khẩu </b> </label>
+      <br /><br />
+      <label><b>Password</b> </label>
       <input type="Password" name="Pass" id="Pass" placeholder="Password" />
-      <br><br>    
+      <br /><br />
       <button>login</button>
     </form>
-    
   </body>
 </html>
