edit label tên đăng nhập, mật khẩu

--- a/Kiem_tra/index.html
+++ b/Kiem_tra/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <form id="login" method="get" action="login.php">
-      <label><b>User Name </b> </label>
+      <label><b>Tên đăng nhập </b> </label>
       <input type="text" name="Uname" id="Uname" placeholder="Username" />
-      <label><b>Password </b> </label>
+      <label><b>Mật khẩu </b> </label>
       <input type="Password" name="Pass" id="Pass" placeholder="Password" />
     </form>
   </body>
