--- a/Kiem_tra/index.html
+++ b/Kiem_tra/index.html
@@ -12,7 +12,7 @@
       <input type="text" name="Uname" id="Uname" placeholder="Username" />
       <label><b>Mật khẩu </b> </label>
       <input type="Password" name="Pass" id="Pass" placeholder="Password" />
-      <button>login</button>
+      <button>đăng nhập</button>
     </form>
   </body>
 </html>
