--- a/Kiem_tra/index.html
+++ b/Kiem_tra/index.html
@@ -9,9 +9,9 @@
   <body>
     <form id="login" method="get" action="login.php">
       <label><b>User Name </b> </label>
-      <input type="text" name="Uname" id="Uname" placeholder="Username" />
+      <input type="text" name="Uname" id="username" placeholder="Username" />
       <label><b>Mật khẩu </b> </label>
-      <input type="Password" name="Pass" id="Pass" placeholder="Password" />
+      <input type="Password" name="Pass" id="matkhau" placeholder="Password" />
       <button>login</button>
     </form>
   </body>
